v0.12/upgrade-step-en.md
# OKEx Upgrades OKExChain Testnet to V0.12.0


Dear OKExChain community members:

OKExChain is scheduled to upgrade its testnet to V0.12.0 at 2020/9/17 10:00 UTC,  the chain-id will become okexchain-testnet1. All data will be removed of the old okchain-testnet1.

## OKExChain testnet v0.12.0 upgrades details
1. The latest upgrade supports SWAP module. Users could swap tokens, create/add/reduce liquidity based on OKExChain SWAP.
2. The address prefix will changed from okchain to okexchain
3. Binary file changed from okchaincli to okexchaincli and okchaind is changed to okexchaind

## What are the duties of an OKExChain validator?
Please stop the current testnet node before 2020/9/17 10:00 UTC and restart a node to join the new testnet following the below instructions. Please provide the new validator address (with a okexchain prefix) and we will provide the test tokens to you.   
https://okexchain-docs.readthedocs.io/en/latest/getting-start/install-okexchain.html


## How can wallets, block browsers and other service providers support the network upgrade?
Users in the app may suffer a short service outage. The duration of the outage depends on the application used. To provide a solid user experience, service providers should adopt appropriate operating procedures and be aware of potential phishing attacks.
Please refer to OKExChain's official channels, listed below, for updated and accurate information.
- OKExChian GitHub：https://github.com/okex/okexchain
- OKExChain Blog：https://www.okex.com/academy/en/category/okexchain-en/
- Telegram group：https://t.me/okexchaintech 

If you have any doubts about the steps of the network upgrade and the reliability of the information, please wait for instructions from OKExChain's official channels before taking any actions. Please do not provide your 12-digits passwords to any administrator, website or unofficial software.

OKExChain  
2020/09/17