v0.15/upgrade-step-en.md
# OKEx Upgrades OKExChain Testnet to V0.15.0


Dear OKExChain community members:

OKExChain is scheduled to upgrade its testnet to V0.15.0 at 2020/12/04 11:00 UTC, the chain-id will become `okexchaintestnet-1`, below are the details

## OKExChain testnet v0.15.0 upgrades details
1. The latest upgrade supports FARM module, FARM module is used to support OKEx SWAP yield farming.
2. OKExChain precision is changed from 8 to 18
3. OKExChain v0.15.0 upgraded to cosmos sdk v0.39.2

## What are the duties of an OKExChain validator?
Please stop the current testnet node before 2020/12/04 10:00 UTC and restart a node and erase the old data to join the new testnet following the below instructions. We will send the same amount of new test tokens to your Validator address.   
https://okexchain-docs.readthedocs.io/en/latest/getting-start/install-okexchain.html


## How can wallets, block browsers and other service providers support the network upgrade?
Users in the app may suffer a short service outage. The duration of the outage depends on the application used. To provide a solid user experience, service providers should adopt appropriate operating procedures and be aware of potential phishing attacks.
Please refer to OKExChain's official channels, listed below, for updated and accurate information.
- OKExChian GitHub：https://github.com/okex/okexchain
- OKExChain Blog：https://www.okex.com/academy/en/category/okexchain-en/
- Telegram group：https://t.me/okexchaintech 

If you have any doubts about the steps of the network upgrade and the reliability of the information, please wait for instructions from OKExChain's official channels before taking any actions. Please do not provide your 12-digits passwords to any administrator, website or unofficial software.

OKExChain  
2020/12/04
